fixed loader visibility issue

--- a/scss/layout_modules/_loader.scss
+++ b/scss/layout_modules/_loader.scss
@@ -1,6 +1,5 @@
 .homepage__loader{
     position: fixed;
-    visibility: hidden;
     top: 0;
     left: 0;
     width: 100%;
